# AvDiagnostics

./: CMakeLists.txt  config.xml
include/: avdiagnostics.h  avlicensing.h  grdapi.h  grdlic.h  grdlic_cpp.h  industrialprotocolutils.h  opcuaclient.h
include/open62541/: config.h
src/: avdiagnostics.cpp  avlicensing.cpp  industrialprotocolutils.cpp  main.cpp  main_old.cpp  opcuaclient.cpp  tinyxml2.cpp
